--- a/Trabajos/4_12_clases_objetos.ipynb
+++ b/Trabajos/4_12_clases_objetos.ipynb
@@ -140,7 +140,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 1,
       "metadata": {},
       "outputs": [],
       "source": [
@@ -213,6 +213,82 @@
       ]
     },
     {
+      "cell_type": "code",
+      "execution_count": 16,
+      "id": "89f79ffc",
+      "metadata": {},
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "Gabriel García Márquez\n",
+            "Colombiano\n",
+            "['Guitarra', 'Aventura']\n"
+          ]
+        }
+      ],
+      "source": [
+        "#Desafio 1\n",
+        "\n",
+        "class Autor_Libro:\n",
+        "    # Constructor de la clase\n",
+        "    def __init__(self, nombre=\"\", nacionalidad=\"\"):\n",
+        "        self.nombre = nombre\n",
+        "        self.nacionalidad = nacionalidad\n",
+        "        self.libro = []\n",
+        "    def agregarlibro(self,libro=\"\"):\n",
+        "        self.libro.append(libro)\n",
+        "    def eliminarlibro(self,libro=\"\"):\n",
+        "        self.libro.pop(libro)\n",
+        "\n",
+        "    # Método para mostrar los detalles del autor\n",
+        "    def mostrar_autor(self):\n",
+        "        print(f\"Nombre: {self.nombre}\")\n",
+        "        print(f\"Nacionalidad: {self.nacionalidad}\")\n",
+        "        print(f\"Libro:{self.libro}\")\n",
+        "\n",
+        "    \n",
+        "\n",
+        "autor1 = Autor_Libro(\"Gabriel García Márquez\", \"Colombiano\") \n",
+        "autor1.agregarlibro(\"Hola\")\n",
+        "autor1.agregarlibro(\"Guitarra\")\n",
+        "autor1.agregarlibro(\"Aventura\")\n",
+        "autor1.eliminarlibro(0)\n",
+        "print(autor1.nombre)\n",
+        "print(autor1.nacionalidad)\n",
+        "print(autor1.libro)\n",
+        "\n",
+        "#Desafio 2\n",
+        "class Autor:\n",
+        "    # Constructor de la clase\n",
+        "    def __init__(self, nombre=\"\", nacionalidad=\"\"):\n",
+        "        self.nombre = nombre\n",
+        "        self.nacionalidad = nacionalidad\n",
+        "class Libro:\n",
+        "    def __init__(self, título=\"\", género=\"\", ISBN=\"\"):\n",
+        "        self.aventura = título\n",
+        "        self.narrativo = género\n",
+        "        self.ISBN = ISBN\n",
+        "\n",
+        "    def mostrar_libro(self):\n",
+        "        print(f\"titulo: {self.titulo}\")\n",
+        "        print(f\"genero: {self.genero}\")\n",
+        "        print(f\"ISBN:{self.ISBN}\") \n",
+        "   "
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "id": "82287fc4",
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "#mejora"
+      ]
+    },
+    {
       "cell_type": "markdown",
       "metadata": {},
       "source": [
@@ -243,7 +319,7 @@
       "name": "python",
       "nbconvert_exporter": "python",
       "pygments_lexer": "ipython3",
-      "version": "3.11.1"
+      "version": "3.11.5"
     }
   },
   "nbformat": 4,
