--- a/Trabajos/4_13_herencia.ipynb
+++ b/Trabajos/4_13_herencia.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Introducción a la Herencia\n",
+    "# Introducción a la Herencia en la ramita\n",
     "\n",
     "En nuestro viaje por el mundo de la Programación Orientada a Objetos (POO), hemos creado clases que representan entidades en una biblioteca, como `Autor` y `Libro`. Pero, ¿qué pasa si queremos crear nuevas clases que compartan características con las ya existentes, pero con algunas diferencias o adicionales? ¡Aquí es donde entra en juego la herencia!\n",
     "\n",
