--- a/Trabajos/4_13_herencia.ipynb
+++ b/Trabajos/4_13_herencia.ipynb
@@ -16,11 +16,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "vscode": {
-     "languageId": "plaintext"
-    }
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "# Definimos la clase base Autor\n",
@@ -45,11 +41,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "vscode": {
-     "languageId": "plaintext"
-    }
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "# Creamos una subclase Escritor que hereda de Autor\n",
@@ -71,11 +63,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "vscode": {
-     "languageId": "plaintext"
-    }
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "# Instanciamos un objeto de la clase Escritor\n",
@@ -95,11 +83,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "vscode": {
-     "languageId": "plaintext"
-    }
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "# Definimos una segunda clase base\n",
@@ -144,16 +128,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "vscode": {
-     "languageId": "plaintext"
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'Libro' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[1;32mc:\\Programaciòn 1\\Curso-Phyton\\Trabajos\\4_13_herencia.ipynb Celda 11\u001b[0m line \u001b[0;36m2\n\u001b[0;32m      <a href='vscode-notebook-cell:/c%3A/Programaci%C3%B2n%201/Curso-Phyton/Trabajos/4_13_herencia.ipynb#X13sZmlsZQ%3D%3D?line=0'>1</a>\u001b[0m \u001b[39m# Creamos una clase que hereda de LibroFiccion y LibroAcademico\u001b[39;00m\n\u001b[1;32m----> <a href='vscode-notebook-cell:/c%3A/Programaci%C3%B2n%201/Curso-Phyton/Trabajos/4_13_herencia.ipynb#X13sZmlsZQ%3D%3D?line=1'>2</a>\u001b[0m \u001b[39mclass\u001b[39;00m \u001b[39mLibroFiccion\u001b[39;00m(Libro, Ficcion):\n\u001b[0;32m      <a href='vscode-notebook-cell:/c%3A/Programaci%C3%B2n%201/Curso-Phyton/Trabajos/4_13_herencia.ipynb#X13sZmlsZQ%3D%3D?line=2'>3</a>\u001b[0m     \u001b[39mdef\u001b[39;00m \u001b[39m__init__\u001b[39m(\u001b[39mself\u001b[39m, nombre, genero):\n\u001b[0;32m      <a href='vscode-notebook-cell:/c%3A/Programaci%C3%B2n%201/Curso-Phyton/Trabajos/4_13_herencia.ipynb#X13sZmlsZQ%3D%3D?line=3'>4</a>\u001b[0m         Libro\u001b[39m.\u001b[39m\u001b[39m__init__\u001b[39m(\u001b[39mself\u001b[39m, nombre)\n",
+      "\u001b[1;31mNameError\u001b[0m: name 'Libro' is not defined"
+     ]
     }
-   },
-   "outputs": [],
+   ],
    "source": [
-    "# Definimos tipos de libros en nuestra biblioteca\n",
-    "biblioteca:\n",
+    "\n",
     "\n",
     "# Creamos una clase que hereda de LibroFiccion y LibroAcademico\n",
     "class LibroFiccion(Libro, Ficcion):\n",
@@ -170,18 +161,28 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "vscode": {
-     "languageId": "plaintext"
-    }
-   },
+   "metadata": {},
    "outputs": [],
    "source": []
   }
  ],
  "metadata": {
+  "kernelspec": {
+   "display_name": "Python 3",
+   "language": "python",
+   "name": "python3"
+  },
   "language_info": {
-   "name": "python"
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.11.5"
   },
   "orig_nbformat": 4
  },
